# python-package-template

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamlfix.toml  AGENTS.md  LICENSE  Makefile  README.md  copier.yml  pyproject.toml  requirements-dev.txt  setup.py  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pr-labeler.yml  pull_request_template.md  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  ci.yml  code-quality-pr.yml  coverage.yml  draft.yml  interrogate.yml  pr-enhancement.yml  pr.yml  pr_auto.yml  pr_auto_create.yml  pr_code_quality.yml  pr_create.yml  pr_description_enforcer.yml  pr_labeler.yml  pre_commit_auto_update.yml  pre_commit_autoupdate.yml  publish-package.yml  publish.yml  release-drafter.yml  release.yml  release_drafter.yml
package/: __init__.py
src/package/: __init__.py
src/package_name/: __init__.py
template/: .pre-commit-config.yaml.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja
template/.github/: CODEOWNERS.jinja
template/.github/workflows/: ci.yml.jinja  publish-package.yml  publish-package.yml.jinja  release-drafter.yml
template/src/{{ package_name }}/: __init__.py
