[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
description = ""
readme = "README.md"
authors = [{ name = "", email = "package@package.com" }]
license = { file = "LICENSE" }
keywords = []
classifiers = []
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
version = { attr = "package._version.__version__" }

[tool.setuptools.dynamic.dependencies]
file = ["requirements-dev.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
include = ["package", "package.*"]

[tool.ruff]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # pydocstyle
    "D",
    # flake8-bandit
    "S",
    # pyupgrade
    "UP",
    # pep8-naming
    "N",
]
# Error E501 (Line too long) is ignored because of docstrings.
ignore = ["S101", "S311", "D100", "D200", "D203", "D205", "D401", "E501"]
extend-exclude = ["tests/*.py", "setup.py"]
target-version = "py39"
force-exclude = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
preview = true
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
filter_files = true
known_first_party = ["package", "package.*"]

[tool.docformatter]
close-quotes-on-newline = true # D209

[tool.interrogate]
fail-under = 80
ignore-module = true
ignore-nested-functions = true
ignore-private = true
exclude = ["tests", "setup.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=package --cov-report=term --cov-report=xml --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["*docs*", "*stubs*", "*examples*", "*tests*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
ignore_errors = true
omit = ["*docs*", "*stubs*", "*examples*", "*tests*"]
exclude_lines = ["if __name__ == .__main__.:", "raise NotImplementedError()"]
